# futuristic-xox

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT-OVERVIEW.md  README.md  feature-tutorial-classic.md  feature-tutorial-futuristic-original.md  futuristic-xox-build-spec.md
ai/: Cargo.toml
ai/examples/: selfplay.rs
ai/src/: adversarial.rs  easy.rs  hard.rs  hash.rs  lib.rs
ai/tests/: legality_and_modes.rs  tactics.rs
ai/tests/common/: mod.rs
aidlc-docs/design-artifacts/: ADR-001-engine-domain-design.md  bonanza-distribution.md  hard-algorithm-flowchart.html  heuristic-calibration.md  morph-shapes.md  security-review.md  topk-root-search-adr.md
aidlc-docs/plans/: adversarial-search-tiers-plan.md  build-plan.md  macos-selfplay-harness-plan.md  setup-winlen-morph-testdev-plan.md
aidlc-docs/release/: store-metadata.md
aidlc-docs/story-artifacts/: morph-tutorial-single-placement.md
bridge/: Cargo.toml
bridge/src/: lib.rs
engine/: Cargo.toml
engine/src/: geometry.rs  lib.rs  mode.rs  rng.rs  rules.rs  setup.rs  state.rs
engine/src/modes/: line.rs  mod.rs  morph.rs
engine/tests/: capture_and_legality.rs  morph.rs  playthrough.rs  setup_modes.rs  win_and_draw.rs  winlen_and_morph.rs
engine/tests/common/: mod.rs
ui/: README.md  pubspec.yaml
ui/android/: key.properties.template
ui/android/app/: build.gradle.kts
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_ru.dart  app_localizations_tr.dart  app_ru.arb  app_tr.arb
ui/lib/src/app/: app_controllers.dart
ui/lib/src/audio/: audio_controller.dart  music_controller.dart  (+1 more)
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/test/: audio_test.dart  dart_engine_test.dart  icon_gen_test.dart  multiplayer_test.dart  selfplay_harness_test.dart  tutorial_test.dart  widget_smoke_test.dart  win_line_test.dart
ui/web/: index.html  manifest.json
(+34 files in other folders)
