[workspace]
resolver = "2"
members = [
    "engine",
    "ai",
    # "bridge" is added once flutter_rust_bridge wiring begins (post-U1).
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = ""

[profile.release]
# AI search is CPU-bound; optimize hard for native mobile builds.
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
