[workspace]
resolver = "2"
members = [
    "engine",
    "ai",
    "bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = ""

[profile.release]
# AI search is CPU-bound; optimize hard for native mobile builds.
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
