[package]
name = "ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Futuristic XOX AI: adversarial top-3 search + per-side difficulty tiers over the engine's Mode trait (Unit 2)."

[lib]
name = "ai"
crate-type = ["rlib"]

[dependencies]
engine = { path = "../engine" }
